<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.CarGuideMainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:theme="@style/ToolBarStyle">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/orange"
            app:popupTheme="@style/Theme.CardGuideApp.PopupOverlay" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolbar_title"
                android:textSize="@dimen/dimen_20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/racing_sans_one" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAppBarLayout"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/headerConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_280dp">

                <ImageView
                    android:id="@+id/headerImageView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_280dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_tacoma"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/header_text_style"
                    android:text="@string/header_title"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="@dimen/dimen_40sp"
                    app:layout_constraintBottom_toTopOf="@+id/subtitleTextView"/>

                <TextView
                    android:id="@+id/subtitleTextView"
                    style="@style/header_text_style"
                    android:text="@string/header_subtitle"
                    android:textSize="@dimen/dimen_20sp"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/headerImageView"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_grey"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_20dp"
                app:cardCornerRadius="@dimen/dimen_8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dimen_20sp"
                        android:text="@string/filter_box_title"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textMakeInputField"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_30dp"
                        android:layout_marginTop="@dimen/dimen_8dp"
                        android:hint="@string/label_hint_make"
                        app:boxCornerRadiusBottomEnd="@dimen/dimen_8dp"
                        app:boxCornerRadiusBottomStart="@dimen/dimen_8dp"
                        app:boxCornerRadiusTopStart="@dimen/dimen_8dp"
                        app:boxCornerRadiusTopEnd="@dimen/dimen_8dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textModelInputField"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_30dp"
                        android:layout_marginTop="@dimen/dimen_8dp"
                        android:hint="@string/label_hint_model"
                        app:boxCornerRadiusBottomEnd="@dimen/dimen_8dp"
                        app:boxCornerRadiusBottomStart="@dimen/dimen_8dp"
                        app:boxCornerRadiusTopStart="@dimen/dimen_8dp"
                        app:boxCornerRadiusTopEnd="@dimen/dimen_8dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/carDetailInformationRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:layout_marginHorizontal="@dimen/dimen_20dp"
                tools:listitem="@layout/car_detail_item"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
