<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/carDetailItemCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/light_grey"
        app:cardCornerRadius="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_20dp">

            <ImageView
                android:id="@+id/carImageView"
                android:layout_width="120dp"
                android:layout_height="80dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_tacoma" />

            <TextView
                android:id="@+id/carModelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_24sp"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/carImageView"
                android:text="@string/car_model_example" />

            <TextView
                android:id="@+id/carPriceTextView"
                style="@style/subtitle_text_style"
                app:layout_constraintTop_toBottomOf="@+id/carModelTextView"
                app:layout_constraintStart_toEndOf="@+id/carImageView"
                android:text="@string/car_price_example"
                android:layout_marginStart="@dimen/dimen_20dp"/>

            <RatingBar
                android:id="@+id/carRatingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:rating="3"
                app:layout_constraintBottom_toBottomOf="@+id/carImageView"
                app:layout_constraintStart_toEndOf="@+id/carImageView"
                android:theme="@style/RatingBar"/>

            <LinearLayout
                android:id="@+id/proConsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/carImageView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    style="@style/subtitle_text_style"
                    android:text="@string/pros_text" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/prosListRecyclerView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/pros_cons_item"
                    tools:itemCount="3"/>

                <TextView
                    style="@style/subtitle_text_style"
                    android:text="@string/cons_text"
                    android:layout_marginTop="@dimen/dimen_20dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/consListRecyclerView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/pros_cons_item"
                    tools:itemCount="3"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

   <View
       android:layout_width="match_parent"
       android:layout_height="@dimen/dimen_5dp"
       app:layout_constraintTop_toBottomOf="@+id/carDetailItemCardView"
       app:layout_constraintStart_toStartOf="parent"
       android:background="@color/orange"
       android:layout_margin="@dimen/dimen_16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
